fix background image on mobile

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -67,7 +67,6 @@
 
     height: 100%;
     width: 100%;
-    background-image: url("../assets/images/noise.svg");
     background-size: 20vmin;
     top: 0;
     left: 0;
@@ -75,6 +74,10 @@
     bottom: 0;
     z-index: -2;
     opacity: 0.3;
+
+    @include tablet {
+      background-image: url("../assets/images/noise.svg");
+    }
   }
 
   &__wrapper {
